tests/fail/issue_13_kebab_var.tk
import std/io::println

fn main() -> i32 {
    auto max-size = 100
    return 0
}
