tests/fail/issue_13_kebab_var.stderr
error[E0101]: Expected ';' or newline after statement
 --> tests/fail/issue_13_kebab_var.tk:4:13
   |
 4 |     auto max-size = 100
   |             ^
